# ps1dev

./: .clang-format  .clangd  .dockerignore  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  build.sh  cdlayout.xml  clean.sh  copy_to_sd_card.sh  debug.sh  docker_build.sh  drun.sh  minimal_run.sh  pcsx.lua  run.sh  run_and_debug_game.sh
assets/: bricks.tim  cato.tim  door_open.vag  font.fnt  ftex.tim  level.fm  ps1.tim  roll.fm  roll.tim  textures.tpj  tims.json  wood_floor.tim
cmake/: BuildAssets.cmake  PSXToolchain.cmake  PsyqoSetup.cmake  Toolchain.cmake
games/: CMakeLists.txt
games/cat_adventure/: CMakeLists.txt  cdlayout.xml  system.cnf
games/cat_adventure/assets/: ash.fm  ash.tim  atlas2.tim  bass.adpcm  bass.vag  bass2.vag  bass_fix.adpcm  bass_orig.adpcm  bricks.tim  car.tim  cato.anm  cato.fm  cato.tim  cato_faces.tim  drum.vag  font.fnt  font.tim  gstep1.vag  gstep2.vag  guitar.vag  house_psx.fm  house_psx.lvl  human.anm  human2.anm  human2.fm  level.lvl  level_new.fm  loop.adpcm  loop2.adpcm  loop2.vag  melody.vag  melody2.vag  news.vag  song.mid  song2.mid  step1.vag  step2.vag  synth.vag  tims.json
games/cat_adventure/assets/b2/: inst.vab  smpl.pcm
games/cat_adventure/assets/bl/: song.mid
games/cat_adventure/assets/maya/: inst.vab
games/cat_adventure/assets/models_json/: ash.json  car.json  cato.json  house_psx.json  human.json  human2.json  level.json  level_new.json  roll.json
games/cat_adventure/assets/mt/: song.mid
games/cat_adventure/assets/pd/: inst.vab
games/cat_adventure/assets/raw/: ash.blend  car.blend  cato.blend  house_psx.blend  house_psx_with_lights.blend  human.blend  human2.blend  level.blend  level_new.blend
games/cat_adventure/assets/raw/levels/: house_psx.json  level.json
games/cat_adventure/assets/songs/b2/: song.mid
games/cat_adventure/assets/songs/baofu/: inst.vab  smpl.pcm  song.mid
games/cat_adventure/assets/songs/bl/: inst.vab  smpl.pcm
games/cat_adventure/assets/songs/l3/: song.mid
games/cat_adventure/assets/songs/l32/: song.mid
games/cat_adventure/assets/songs/majin/: inst.vab  smpl.pcm  song.mid
games/cat_adventure/assets/songs/maya/: smpl.pcm  song.mid
games/cat_adventure/assets/songs/mt/: inst.vab  smpl.pcm
games/cat_adventure/assets/songs/pd/: smpl.pcm
games/cat_adventure/assets/songs/ro/: inst.vab  smpl.pcm  song.mid
games/cat_adventure/assets/songs/smt/: inst.vab  smpl.pcm  song.mid
games/cat_adventure/docs/: subdiv.md
games/cat_adventure/src/: Armature.cpp  Armature.h  Bouncer.h  CDLoader.cpp  CDLoader.h  Camera.h  Collision.cpp  Collision.h  Common.h  DebugMenu.cpp  DebugMenu.h  DialogueBox.cpp  DialogueBox.h  Font.cpp  Game.cpp  Game.h  GameplayScene.cpp  GameplayScene.h  Level.cpp  Level.h  LoadingScene.cpp  LoadingScene.h  Math.cpp  Math.h  MidiFile.cpp  MidiFile.h  Model.cpp  Model.h  Object.cpp  Object.h  Quaternion.cpp  Quaternion.h  RainbowColors.cpp  Renderer.cpp  Renderer.h  ResourceCache.cpp  ResourceCache.h  Resources.h  SkeletalAnimation.cpp  SkeletalAnimation.h  (+24 more)
games/cat_adventure/src/ActionList/: Action.h  ActionList.cpp  ActionList.h  ActionListManager.cpp  ActionListManager.h  ActionWrappers.cpp  ActionWrappers.h
games/cat_adventure/src/ActionList/Actions/: ActionListFinishAction.cpp  ActionListFinishAction.h  CameraMoveAction.cpp  CameraMoveAction.h  DelayAction.cpp  DelayAction.h  DoAction.cpp  DoAction.h  LerpAction.cpp  LerpAction.h  RotateTowardsAction.cpp  RotateTowardsAction.h  SayAction.cpp  SayAction.h  SetAnimAndWaitAction.cpp  SetAnimAndWaitAction.h  WaitWhileAction.cpp  WaitWhileAction.h
games/cat_adventure/src/Audio/: MidiFile.cpp  SongPlayer.cpp  SongPlayer.h  SoundPlayer.cpp  SoundPlayer.h  VabFile.cpp  VabFile.h
games/cat_adventure/src/Core/: PadManager.cpp  PadManager.h  StringHash.cpp  StringHash.h  Timer.cpp  Timer.h
games/cat_adventure/src/Dev/: DebugMenu.cpp  DebugMenu.h
games/cat_adventure/src/Graphics/: Armature.h  Font.cpp  Model.cpp  Model.h  RainbowColors.h  Renderer.cpp  Renderer.h  SkeletalAnimation.cpp  SkeletalAnimation.h  SkeletonAnimator.cpp  SkeletonAnimator.h  Subdivision.h  TextureInfo.h  TimFile.cpp  TimFile.h
games/cat_adventure/src/Math/: Math.cpp  Math.h  Quaternion.cpp  Quaternion.h  Transform.cpp  Transform.h
games/cat_adventure/src/UI/: DialogueBox.cpp  DialogueBox.h  TextLabel.cpp
games/cat_adventure/src/Util/: Bouncer.h  FPSCounter.cpp  FPSCounter.h
games/minimal/: CMakeLists.txt  main.cpp
gdb/: eastl-prettyprint.py
hello_cube/: hello_cube.cpp
src/: Bouncer.cpp  Camera.cpp  Camera.h  Clip.cpp  Clip.h  DialogueBox.cpp  DialogueBox.h  FastModel.cpp  FastModel.h  FileReader.h  Font.h  Game.cpp  Game.h  GameplayScene.cpp  GameplayScene.h  Globals.h  LoadingScene.h  Model.cpp  Model.h  Object.h  PF_WAVE.H  Renderer.cpp  Renderer.h  SoundPlayer.cpp  SoundPlayer.h  Subdivision.h  TimFile.cpp  (+10 more)
tools/: CMakeLists.txt
tools/blender/: json_export.py
tools/common/: Color.h  FixedPoint.h  FsUtil.h  ImageLoader.cpp  ImageLoader.h  PsyQTypes.h
tools/imhex_patterns/: animation.hexpat  fast_model.hexpat  fastmodel.hexpat  font.hexpat  level.hexpat  model.hexpat  ps1.hexproj  vag.hexpat
tools/imhex_patterns/includes/: animation.hexpat  math.hexpat  model.hexpat  new_level.hexpat  tim.hexpat  vab_header.hexpat
tools/model_converter/src/: AnimationWriter.cpp  AnimationWriter.h  ConversionParams.h  DJBHash.h  FastModel.cpp  FastModel.h  GTETypes.h  Json2FastModel.cpp  Json2FastModel.h  Json2PsxConverter.cpp  Json2PsxConverter.h  LevelJsonFile.cpp  LevelJsonFile.h  LevelWriter.cpp  LevelWriter.h  MaterialsData.cpp  MaterialsData.h  Math.h  ModelJsonFile.cpp  ModelJsonFile.h  Obj2PsxConverter.cpp  Obj2PsxConverter.h  ObjFile.cpp  ObjFile.h  PsxModel.cpp  PsxModel.h  TexturesData.cpp  TexturesData.h  main.cpp
tools/timtool/: example.json
tools/timtool/src/: FileReader.h  Font.cpp  Font.h  TimCreateConfig.cpp  TimCreateConfig.h  TimFile.cpp  TimFile.h  TimFileCreator.cpp  TimFileCreator.h  TimFileRead.cpp  TimFileRead.h  TimFileWrite.cpp  TimFileWrite.h  main.cpp
(+10 files in other folders)
